--- a/20241003_exploratory_analysis.Rmd
+++ b/20241003_exploratory_analysis.Rmd
@@ -218,5 +218,82 @@ weather_df |>
 ```
 You can also change the way you rank things, use "desc" in the new variable statement with min_rank: temp_rank = min_ranl(desc(tmax))
 
+```{r}
+pulse_data = 
+  haven::read_sas("data_import_examples/public_pulse_data.sas7bdat") |>
+  janitor::clean_names() |>
+  pivot_longer(
+    bdi_score_bl:bdi_score_12m,
+    names_to = "visit", 
+    names_prefix = "bdi_score_",
+    values_to = "bdi") |>
+  select(id, visit, everything()) |>
+  mutate(
+    visit = replace(visit, visit == "bl", "00m"),
+    visit = factor(visit, levels = str_c(c("00", "01", "06", "12"), "m"))) |>
+  arrange(id, visit)
 
+pulse_data |> 
+  group_by(visit) |> 
+  summarize(
+    mean_bdi = mean(bdi, na.rm = TRUE),
+    median_bdi = median(bdi, na.rm = TRUE)) |> 
+  knitr::kable(digits = 3)
+```
+
+
+
+```{r}
+pup_data = 
+  read_csv("data_import_examples/FAS_pups.csv") |>
+  janitor::clean_names() |>
+  mutate(sex = recode(sex, `1` = "male", `2` = "female")) 
+
+litter_data = 
+    read_csv("data_import_examples/FAS_litters.csv") |>
+  janitor::clean_names() |>
+  separate(group, into = c("dose", "day_of_tx"), sep = 3)
+
+fas_data = left_join(pup_data, litter_data, by = "litter_number") 
+
+fas_data |> 
+  group_by(dose, day_of_tx) |> 
+  drop_na(dose) |> 
+  summarize(mean_pivot = mean(pd_pivot, na.rm = TRUE)) |> 
+  pivot_wider(
+    names_from = dose, 
+    values_from = mean_pivot) |> 
+  knitr::kable(digits = 3)
+```
+# FAS dataset
+```{r}
+litters_df = 
+  read_csv("data_import_examples/FAS_litters.csv", na = c("NA", "", ".")) |> 
+  janitor::clean_names() |> 
+  separate(
+    group, into = c("dose", "tx_day"), sep=3
+  )
+
+pups_df = 
+  read_csv("data_import_examples/FAS_pups.csv", na = c("NA", "", ".")) |> 
+  janitor::clean_names() 
+
+fas_df = 
+  left_join(pups_df, litters_df, by = "litter_number")
+```
+
+
+Compute a table we care about: 
+
+```{r}
+fas_df |> 
+  drop_na(dose) |> 
+  group_by(dose, tx_day) |> 
+  summarize(mean_pivot = mean(pd_pivot, na.rm = TRUE)) |> 
+  pivot_wider(
+    names_from = tx_day, 
+    values_from = mean_pivot
+  ) |> 
+  knitr::kable(digits=2)
+```
 
